// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="community-menu"
>
  <div
    className="menu-items"
  >
    <span
      className="flex community-menu-item lg:hidden selected-item"
    />
    <div
      className="hidden lg:flex items-center"
    >
      <a
        className="community-menu-item flex selected-item"
        href="/trending/hive-148441"
        onClick={[Function]}
      >
        Trending
      </a>
      <a
        className="community-menu-item flex"
        href="/hot/hive-148441"
        onClick={[Function]}
      >
        Hot
      </a>
      <a
        className="community-menu-item flex"
        href="/created/hive-148441"
        onClick={[Function]}
      >
        New
      </a>
      <a
        className="community-menu-item flex"
        href="/payout/hive-148441"
        onClick={[Function]}
      >
        Payouts
      </a>
      <a
        className="community-menu-item flex"
        href="/muted/hive-148441"
        onClick={[Function]}
      >
        Muted
      </a>
    </div>
    <a
      className="community-menu-item flex"
      href="/subscribers/hive-125125"
      onClick={[Function]}
    >
      Members
    </a>
    <a
      className="community-menu-item flex"
      href="/activities/hive-125125"
      onClick={[Function]}
    >
      Activities
    </a>
  </div>
  <div
    className="page-tools"
  >
    <div
      className="viewLayouts"
    />
  </div>
</div>
`;

exports[`(2) Hot filter 1`] = `
<div
  className="community-menu"
>
  <div
    className="menu-items"
  >
    <span
      className="flex community-menu-item lg:hidden selected-item"
    >
      <div
        className="custom-dropdown float-left"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          <div
            className="label"
          >
            Hot
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
    <div
      className="hidden lg:flex items-center"
    >
      <a
        className="community-menu-item flex"
        href="/trending/hive-148441"
        onClick={[Function]}
      >
        Trending
      </a>
      <a
        className="community-menu-item flex selected-item"
        href="/hot/hive-148441"
        onClick={[Function]}
      >
        Hot
      </a>
      <a
        className="community-menu-item flex"
        href="/created/hive-148441"
        onClick={[Function]}
      >
        New
      </a>
      <a
        className="community-menu-item flex"
        href="/payout/hive-148441"
        onClick={[Function]}
      >
        Payouts
      </a>
      <a
        className="community-menu-item flex"
        href="/muted/hive-148441"
        onClick={[Function]}
      >
        Muted
      </a>
    </div>
    <a
      className="community-menu-item flex"
      href="/subscribers/hive-125125"
      onClick={[Function]}
    >
      Members
    </a>
    <a
      className="community-menu-item flex"
      href="/activities/hive-125125"
      onClick={[Function]}
    >
      Activities
    </a>
  </div>
  <div
    className="page-tools"
  >
    <div
      className="viewLayouts"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="view-feed"
        >
          <span
            className="view-layout "
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
                fill="currentColor"
              />
            </svg>
          </span>
           
          <span
            className="menu-down-icon "
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`(3) In section 1`] = `
<div
  className="community-menu"
>
  <div
    className="menu-items"
  >
    <span
      className="flex community-menu-item lg:hidden selected-item"
    />
    <div
      className="hidden lg:flex items-center"
    >
      <a
        className="community-menu-item flex"
        href="/trending/hive-148441"
        onClick={[Function]}
      >
        Trending
      </a>
      <a
        className="community-menu-item flex selected-item"
        href="/hot/hive-148441"
        onClick={[Function]}
      >
        Hot
      </a>
      <a
        className="community-menu-item flex"
        href="/created/hive-148441"
        onClick={[Function]}
      >
        New
      </a>
      <a
        className="community-menu-item flex"
        href="/payout/hive-148441"
        onClick={[Function]}
      >
        Payouts
      </a>
      <a
        className="community-menu-item flex"
        href="/muted/hive-148441"
        onClick={[Function]}
      >
        Muted
      </a>
    </div>
    <a
      className="community-menu-item flex"
      href="/subscribers/hive-125125"
      onClick={[Function]}
    >
      Members
    </a>
    <a
      className="community-menu-item flex"
      href="/activities/hive-125125"
      onClick={[Function]}
    >
      Activities
    </a>
  </div>
  <div
    className="page-tools"
  >
    <div
      className="viewLayouts"
    />
  </div>
</div>
`;
